--- a/style.css
+++ b/style.css
@@ -21,9 +21,36 @@ html {
     box-sizing: inherit;
 }
 
+:root.light {
+    --text-color: black; 
+    --bg-color: rgb(240, 240, 240);
+}
+
+:root.dark {
+    --text-color: white; 
+    --bg-color: black;
+}
+
 :root {
     font-size: 25px;
     font-family: poppins;
+}
+
+body {
+    display: flex;
+    flex: row;
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
+
+p, div, span{
+    font-size: 0.7rem;
+    color: var(--text-color);
+}
+
+
+p + p {
+    margin-top: 20px;
 }
 
 .image-sidebar {
@@ -61,5 +88,9 @@ div.logo-heading {
 
     position: absolute;
     top: 50%;
+}
+
+div.content {
+    width: 65vw;
 }
 
