--- a/style.css
+++ b/style.css
@@ -210,10 +210,11 @@ span{
     top: 5px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 850px) {
 
     body{
       flex-direction: column;
+      padding-bottom: 20px;
     }
   
     .image-sidebar {
